Redo the routing for urls and views, add css styling and add to base template.

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
             <div class="container-fluid">
 
                 <!-- Title (Left side) -->
-                <a class="navbar-brand" href="#">MySite</a>
+                <a class="navbar-brand" href="#">FitSphere</a>
 
                 <!-- Navbar Links (Centering) -->
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
