Add fonts in head, add spans with color for titles and re do socials

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Fonts -->
-
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Lora:wght@400;700&display=swap"
+        rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
@@ -27,7 +28,7 @@
             <div class="container-fluid">
 
                 <!-- Title (Left side) -->
-                <a class="navbar-brand" href="#">FitSphere</a>
+                <a class="navbar-brand" href="#"><span>Fit</span>Sphere</a>
 
                 <!-- Navbar Links (Centering) -->
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
@@ -36,13 +37,13 @@
                             <a class="nav-link" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Trainers</a>
+                            <a class="nav-link" href="#"><span>Trainers</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Sign Up</a>
+                            <a class="nav-link" href="#"><span>Sign up</span></a>
                         </li>
                     </ul>
                 </div>
@@ -52,27 +53,33 @@
 
 
     <!-- Footer -->
-    <footer class="text-center">
-        <div class="container">
-            <div class="row justify-content-center">
-                <!-- Social Media Icons -->
-                <div class="col-auto social-icons">
-                    <a href="#" target="_blank" class="text-decoration-none">
-                        <i class="fab fa-facebook"></i>
-                    </a>
-                    <a href="#" target="_blank" class="text-decoration-none">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a href="#" target="_blank" class="text-decoration-none">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a href="#" target="_blank" class="text-decoration-none">
-                        <i class="fab fa-linkedin"></i>
-                    </a>
+    <div class="wrapper">
+        <!-- Main content -->
+        <div class="content">
+
+        </div>
+        <!-- Footer -->
+        <footer class="text-center">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-auto social-icons">
+                        <a href="#" target="_blank" class="text-decoration-none">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="#" target="_blank" class="text-decoration-none">
+                            <i class="fab fa-twitter social"></i>
+                        </a>
+                        <a href="#" target="_blank" class="text-decoration-none">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="#" target="_blank" class="text-decoration-none">
+                            <i class="fab fa-linkedin social"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
