--- a/templates/base.html
+++ b/templates/base.html
@@ -22,9 +22,9 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
-<body>
+<body class="bg-grey text-light">
     <main>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
 
                 <!-- Title (Left side) -->
@@ -52,6 +52,9 @@
     </main>
 
 
+
+
+
     <!-- Footer -->
     <div class="wrapper">
         <!-- Main content -->
@@ -59,7 +62,7 @@
 
         </div>
         <!-- Footer -->
-        <footer class="text-center">
+        <footer class="text-center bg-dark text-light py-4">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-auto social-icons">
@@ -78,6 +81,7 @@
                     </div>
                 </div>
             </div>
+            <p>Follow us on social media!</p>
         </footer>
     </div>
 
