--- a/pt/templates/index.html
+++ b/pt/templates/index.html
@@ -1,6 +1,23 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block content %}
+<video autoplay muted loop id="myVideo">
+    <source src="{% static 'videos/jogging.mp4' %}" type="video/mp4">
+</video>
 
+<!-- Overlay content with Bootstrap classes -->
+<div class="content position-absolute top-50 start-50 translate-middle overlay">
+    <h1><strong>Become a pro</strong>!</h1>
+    <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+        aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo
+        enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
+        <br>
+        consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam
+        quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam,
+        nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse
+        quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+    <p class="statement">Sign up and make change</p>
+    <a href="#" class="btn">Let's go</a>
+</div>
 <!-- index.html content ends here -->
 {% endblock %}
