--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,7 +35,6 @@
 
 html,
 body {
-    height: 100%;
     margin: 0;
     font-family: 'Lora',
         serif;
@@ -119,6 +118,27 @@ span {
     /* Ensure the wrapper fills the height of the viewport */
 }
 
+.video-background {
+    position: relative;
+    width: 100%;
+    height: calc(100vh - 56px);
+    /* Full height of the viewport minus the height of the navbar */
+    overflow: hidden;
+    /* Prevent overflow if video is too large */
+}
+
+/* The video itself */
+.my-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* Ensures the video covers the entire container without distortion */
+}
+
+
 .content {
     flex-grow: 1;
     /* Allow content to take up remaining space */
@@ -140,6 +160,19 @@ span {
     z-index: 1;
     backdrop-filter: blur(5px);
     /* Optional blur effect */
+}
+
+.btn {
+    background-color: #1ABC9C;
+}
+
+.btn:hover {
+    background-color: #16a085;
+    text-shadow: 0 0 5px rgba(22, 160, 133, 0.9);
+    transform: scale(1.1);
+    transition: text-shadow 0.3s ease,
+        color 0.3s ease,
+        transform 0.3s ease;
 }
 
 footer {
