Add class to cards for styling

--- a/trainers/templates/trainers/trainers.html
+++ b/trainers/templates/trainers/trainers.html
@@ -10,7 +10,7 @@
         <div class="col-md-6 col-lg-4 text-center">
             <!-- Display the single trainer's card -->
             <div class="card">
-                <img src="{{ trainers.0.featured_image.url }}" class="card-img-top rounded-circle"
+                <img src="{{ trainers.0.featured_image.url }}" class="card-img-top rounded-circle image-pos"
                     alt="{{ trainers.0.first_name }} {{ trainers.0.last_name }}"
                     style="width: 150px; height: 150px; object-fit: cover; margin: 0 auto;">
                 <div class="card-body">
@@ -26,7 +26,7 @@
         <div class="col-md-4 col-lg-3 mb-4">
             <!-- Display each trainer's card -->
             <div class="card">
-                <img src="{{ trainer.featured_image.url }}" class="card-img-top rounded-circle"
+                <img src="{{ trainer.featured_image.url }}" class="card-img-top rounded-circle image-pos"
                     alt="{{ trainer.first_name }} {{ trainer.last_name }}"
                     style="width: 150px; height: 150px; object-fit: cover; margin: 0 auto;">
                 <div class="card-body">
