--- a/static/css/style.css
+++ b/static/css/style.css
@@ -170,12 +170,6 @@ span {
     margin-bottom: 0;
 }
 
-/* Add a subtle hover effect for the text */
-.trainer-intro h2:hover {
-    color: #FF5733;
-    cursor: pointer;
-}
-
 
 /* Card Styling */
 .card {
@@ -372,6 +366,7 @@ footer {
 
     .intro-buttons .btn {
         width: 100%;
-        padding: 12px 0;
+        padding: 6px 0;
+        margin-top: 10px;
     }
 }
