Add url link to navbar brand

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <!-- Title (Left side) -->
-            <a class="navbar-brand" href="#"><span>Fit</span>Sphere</a>
+            <a class="navbar-brand" href="{% url 'index' %}"><span>Fit</span>Sphere</a>
 
             <!-- Hamburger Button for Mobile View -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
