--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
             <!-- Hamburger Button for Mobile View -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span> <!-- This is the hamburger icon -->
+                <span class="navbar-toggler-icon"></span>
             </button>
 
             <!-- Navbar Links (Centering) -->
@@ -65,7 +65,6 @@
         <!-- Content Goes here -->
         {% endblock content %}
     </main>
-
 
 
 
