--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,6 @@
 
 <body>
 
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <!-- Title (Left side) -->
@@ -33,7 +32,7 @@
             <!-- Hamburger Button for Mobile View -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span> <!-- This is the hamburger icon -->
             </button>
 
             <!-- Navbar Links (Centering) -->
@@ -65,6 +64,7 @@
         <!-- Content Goes here -->
         {% endblock content %}
     </main>
+
 
 
 
