Create styling for comment section in the trainer profile card

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -318,6 +318,16 @@ span {
     order: -1;
 }
 
+.feedback-item {
+    margin-bottom: 15px;
+
+}
+
+.feedback-item p {
+    margin: 0;
+
+}
+
 
 footer {
     margin-top: 0;
