--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,35 +2,28 @@
 /* Style the scrollbar */
 ::-webkit-scrollbar {
     width: 6px;
-    /* Set width of the scrollbar */
 }
 
 /* Style the scrollbar track (background) */
 ::-webkit-scrollbar-track {
     background-color: #333;
-    /* Dark track background */
     border-radius: 10px;
-    /* Optional rounded corners for the track */
 }
 
 /* Style the scrollbar thumb (the draggable part) */
 ::-webkit-scrollbar-thumb {
     background-color: #FF5733;
-    /* Vibrant orange color for the thumb */
     border-radius: 10px;
-    /* Rounded corners for the thumb */
 }
 
 /* Style the thumb when hovered */
 ::-webkit-scrollbar-thumb:hover {
     background-color: #e44d26;
-    /* Darker orange on hover */
 }
 
 /* Optional: Hide the scrollbar buttons (arrows) */
 ::-webkit-scrollbar-button {
     display: none;
-    /* Hide up/down arrows */
 }
 
 html,
@@ -56,16 +49,12 @@ h4,
 h5,
 h6 {
     font-family: 'Oswald', sans-serif;
-    /* Heading font */
     font-weight: 700;
-    /* Make the headings bold */
     letter-spacing: 1px;
-    /* Optional: adds space between letters for a cleaner look */
 }
 
 p {
     font-size: 16px;
-    /* Adjust size for body text */
 }
 
 span {
@@ -318,14 +307,74 @@ span {
     order: -1;
 }
 
-.feedback-item {
-    margin-bottom: 15px;
+.age {
+    color: white;
+}
 
+/* About Section */
+.about-section {
+    background-color: #444;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    margin-bottom: 30px;
+    width: 100%;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.about-section h3 {
+    font-size: 1.8rem;
+    color: #FF5733;
+    margin-bottom: 20px;
+}
+
+.about-section p {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    color: #ccc;
+}
+
+/* Feedback Items */
+.feedback-item {
+    background-color: #444;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.feedback-item h3 {
+    font-size: 1.8rem;
+    color: #FF5733;
+    margin-bottom: 20px;
 }
 
 .feedback-item p {
     margin: 0;
+    color: #ccc;
+    font-size: 1.1rem;
+    line-height: 1.6;
+}
 
+.feedback-item strong {
+    color: #FF5733;
+}
+
+.feedback-item:hover {
+    background-color: #666;
+    /* Darker background on hover */
+    transform: translateY(-5px);
+    /* Slight lift effect */
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+}
+
+.feedback-item:last-child {
+    margin-bottom: 0;
 }
 
 
@@ -388,5 +437,22 @@ footer {
         width: 100%;
         padding: 6px 0;
         margin-top: 10px;
+    }
+
+    .profile-image {
+        width: 120px;
+        height: 120px;
+    }
+
+    h2 {
+        font-size: 1.5rem;
+    }
+
+    p {
+        font-size: 1rem;
+    }
+
+    h3 {
+        font-size: 1.2rem;
     }
 }
