--- a/templates/base.html
+++ b/templates/base.html
@@ -29,49 +29,48 @@
 </head>
 
 <body>
+    <!-- Header Content -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <!-- Title (Left side) -->
+                <a class="navbar-brand" href="{% url 'index' %}"><span>Fit</span>Sphere</a>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <!-- Title (Left side) -->
-            <a class="navbar-brand" href="{% url 'index' %}"><span>Fit</span>Sphere</a>
+                <!-- Hamburger Button for Mobile View -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span> <!-- This is the hamburger icon -->
+                </button>
 
-            <!-- Hamburger Button for Mobile View -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span> <!-- This is the hamburger icon -->
-            </button>
-
-            <!-- Navbar Links (Centering) -->
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/pt/' %}active{% endif %}"
-                            href="{% url 'index' %}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/trainers/' %}active{% endif %}"
-                            href="{% url 'trainers' %}"><span>Trainers</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/about/' %}active{% endif %}" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/signup/' %}active{% endif %}" href="#"><span>Sign
-                                up</span></a>
-                    </li>
-                </ul>
+                <!-- Navbar Links (Centering) -->
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == '/pt/' %}active{% endif %}"
+                                href="{% url 'index' %}">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == '/trainers/' %}active{% endif %}"
+                                href="{% url 'trainers' %}"><span>Trainers</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == '/about/' %}active{% endif %}" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == '/signup/' %}active{% endif %}" href="#"><span>Sign
+                                    up</span></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-
+        </nav>
+    </header>
 
     <main>
         {% block content %}
         <!-- Content Goes here -->
         {% endblock content %}
     </main>
-
-
 
 
     <!-- Footer -->
@@ -85,16 +84,20 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-auto social-icons">
-                        <a href="#" target="_blank" class="text-decoration-none">
+                        <a href="{{ social_links.facebook }}" target="_blank" class="text-decoration-none"
+                            rel="noopener noreferrer">
                             <i class="fab fa-facebook"></i>
                         </a>
-                        <a href="#" target="_blank" class="text-decoration-none">
+                        <a href="{{ social_links.twitter }}" target="_blank" class="text-decoration-none"
+                            rel="noopener noreferrer">
                             <i class="fab fa-twitter social"></i>
                         </a>
-                        <a href="#" target="_blank" class="text-decoration-none">
+                        <a href="{{ social_links.instagram }}" target="_blank" class="text-decoration-none"
+                            rel="noopener noreferrer">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="#" target="_blank" class="text-decoration-none">
+                        <a href="{{ social_links.linkedin }}" target="_blank" class="text-decoration-none"
+                            rel="noopener noreferrer">
                             <i class="fab fa-linkedin social"></i>
                         </a>
                     </div>
