--- a/static/css/style.css
+++ b/static/css/style.css
@@ -207,11 +207,6 @@ span {
     margin-bottom: 10px;
 }
 
-/* Add some extra hover effects on the title */
-.card-body:hover .card-title {
-    color: #20B2AA;
-}
-
 .image-pos {
     padding: 0.5em;
 }
@@ -339,6 +334,7 @@ span {
 /* Feedback Items */
 .feedback-item {
     background-color: #444;
+    color: #FF5733;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
@@ -348,31 +344,15 @@ span {
     margin-right: auto;
 }
 
-.feedback-item h3 {
+.comment-h3 {
     font-size: 1.8rem;
-    color: #FF5733;
     margin-bottom: 20px;
 }
 
 .feedback-item p {
     margin: 0;
-    color: #ccc;
     font-size: 1.1rem;
     line-height: 1.6;
-}
-
-.feedback-item strong {
-    color: #FF5733;
-}
-
-.feedback-item:hover {
-    background-color: #666;
-    transform: translateY(-5px);
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-}
-
-.feedback-item:last-child {
-    margin-bottom: 0;
 }
 
 
