--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,11 @@
     <meta name="keywords"
         content="personal training, fitness, coaches, workout reviews, fitness community, fitness plans, gym trainers">
     <meta name="author" content="FitSphere Team">
+    <!-- Favicon -->
+    <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
+    <link rel="icon" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
+    <link rel="icon" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
+    <link rel="icon" sizes="192x192" href="{% static 'images/favicon-192x192.png' %}">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Lora:wght@400;700&display=swap"
         rel="stylesheet">
