--- a/trainers/templates/trainer_profile.html
+++ b/trainers/templates/trainer_profile.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-12 text-center">
             <img src="{{ trainer.featured_image.url }}" class="profile-image"
-                alt="{{ trainer.first_name }} {{ trainer.last_name }}">
+                alt="photo of {{ trainer.first_name }} {{ trainer.last_name }}">
             <h2 class="mt-3">{{ trainer.first_name }} {{ trainer.last_name }}</h2>
             <p class="age"><strong>Age:</strong> {{ trainer.age }}</p>
 
@@ -34,15 +34,19 @@
 
 <div class="row mt-4">
     <div class="col-12">
+        <h3 class="feedback-item comment-h3">Comments:</h3>
+
+        {% if feedbacks %}
         <!-- Loop through the feedbacks and display each comment -->
         {% for feedback in feedbacks %}
         <div class="feedback-item">
-            <h3>Comments:</h3>
             <p><strong>{{ feedback.user.username }}:</strong> {{ feedback.comment|safe }}</p>
         </div>
         {% endfor %}
+        {% else %}
+        <p class="feedback-item">No comments yet. Be the first one to leave feedback!</p>
+        {% endif %}
     </div>
 </div>
-
 </div>
 {% endblock %}
