--- a/trainers/templates/trainer_profile.html
+++ b/trainers/templates/trainer_profile.html
@@ -11,20 +11,19 @@
             <h2 class="mt-3">{{ trainer.first_name }} {{ trainer.last_name }}</h2>
             <p class="age"><strong>Age:</strong> {{ trainer.age }}</p>
 
-            <!-- Display the average rating stars -->
-            <div class="star-rating">
+            <!-- Display star rating -->
+            <div class="star-rating" role="group" aria-labelledby="rating">
                 {% for i in stars_range %}
                 {% if i <= avg_rating %}
-                <span class="fa fa-star checked"></span> <!-- Full Star -->
+                <span class="fa fa-star checked" aria-label="full star" role="img"></span>
                 {% elif i == avg_rating|add:0.5 %}
-                <span class="fa fa-star-half-alt checked"></span> <!-- Half Star -->
+                <span class="fa fa-star-half-alt checked" aria-label="half star" role="img"></span>
                 {% else %}
-                <span class="fa fa-star"></span> <!-- Empty Star -->
+                <span class="fa fa-star" aria-label="empty star" role="img"></span>
                 {% endif %}
                 {% endfor %}
+                <span id="rating" class="sr-only">Rating: {{ avg_rating }} out of 5 stars</span>
             </div>
-
-
         </div>
     </div>
 </div>
